--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ header-img: img/home-bg.jpg
 email: huxpro@gmail.com
 description: ""
 keyword: ""
-url: "http://huangxuan.me"              # your host, for absolute URL
-baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
+url: "http://xmm19970610.github.io"              # your host, for absolute URL
+baseurl: "/xmm19970610.github.io"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
+weibo_username:     .
+zhihu_username:     .
+github_username:    .
 #twitter_username:  huxpro
-facebook_username:  huxpro
+facebook_username:  .
 
 
 
